# esp32-test-stubs

./: README.md  machine.pyi  pyproject.toml
esp-stubs/: __init__.pyi
esp-stubs/sub_pkg/: __init__.pyi
esp32-stubs/: __init__.pyi  sub_pkg.pyi
uuid-stubs/: __init__.pyi
